--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run lite",
+    "test": "echo \"Error: no test specified\" && exit 1",
+      "lite": "lite-server"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/chinmaygawde7/chinmaygawde/issues"
   },
-  "homepage": "https://github.com/chinmaygawde7/chinmaygawde#readme"
+  "homepage": "https://github.com/chinmaygawde7/chinmaygawde#readme",
+  "devDependencies": {
+    "lite-server": "^2.5.4"
+  }
 }
